--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <meta charset="utf-8">
 <title>UDCD - Design practice</title>
 <meta name="viewport" content="width=device-width">
-<link href='http://fonts.googleapis.com/css?family=Merriweather:400,700|Raleway:500' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,300italic,400italic,600italic|Oswald:400,700' rel='stylesheet' type='text/css'>
 <link href='css/normalize.css' rel='stylesheet' type='text/css'>
-<link href='css/generic.css' rel='stylesheet' type='text/css'>
 <link href='css/styles.css' rel='stylesheet' type='text/css'>
 <div class="home">
 	<article>
@@ -15,13 +14,13 @@
           <img src="img/ico-design.png" />
         </div>
         <h2>UDCD</h2>
-        <p>A design decisions making framework in 4 simple steps:<br>
+        <p class="catch">A design decisions making framework in 4 simple steps:<br>
         Understand, Diverge, Converge, and Document.</p>
         <p class="quote">"Without a practice, you’re just doing design — a short-term activity. But when you practice design, you’re focusing on long-term sustainable success."<br/><span>Verne Ho</span></p>
       </div>
     </header>
 		<div class="row">
-			<p>Whether you realize it or not, you are constantly designing. Whenever you're making a decision that is part of a plan to achieve a goal, you're designing.<br/>
+			<p>Whether you realize it or not, you are constantly designing. Whenever you're making a decision that is part of a plan to achieve a goal, you are designing.<br/>
       Here, we'll "only" talk about product design, the process of making decisions about how a product will behave, as a bridge between people and their goals on the user's side, and between a business and its goals on the company's side.</p>
 			<p>This design practice aims to enable these design decisions to be :
 				<ul>
@@ -50,7 +49,7 @@
 			Benefits of following a clear vision are often higher in the long term than diverging for micro-decisions, even when they seem better when isolated.</p>
 		</div>
 
-		<header>
+		<header id="understandHeader">
 			<div class="row">
 				<div id="pageIco">
 					<img src="img/ico-understand.png" />
@@ -82,7 +81,7 @@
 			</ul>
 		</div>
 
-		<header>
+		<header id="divergeHeader">
 			<div class="row">
 				<div id="pageIco">
 					<img src="img/ico-diverge.png" />
@@ -100,7 +99,7 @@
 
 			<h3>Goals</h3>
 			<ul class="goalsList">
-				<li><strong>Explore as many solutions as possible</strong><br>Behavorial triggers (<a href="http://www.zurb.com/triggers">zurb's triggers</a>, <a href="http://www.coglode.com">coglode</a>,...); Ideas tree ("how" to narrow a decision, and "why" to broader the point of view and reveal new opportunities),...</li>
+				<li><strong>Explore as many solutions as possible</strong><br>Behavorial triggers (<a href="http://www.zurb.com/triggers">zurb's triggers</a>, <a href="http://www.coglode.com">coglode</a>,...), Ideas tree ("how" to narrow a decision, and "why" to broader the point of view and reveal new opportunities),...</li>
 				<li><strong>Challenge patterns, standards and conventions</strong><br>The "Why" in the ideas tree,...</li>
 				<li><strong>Ignore the constraints</strong><br>Pretend it's magic,...</li>
 			</ul>
@@ -113,7 +112,7 @@
 			</ul>
 		</div>
 
-		<header>
+		<header id="convergeHeader">
 			<div class="row">
 				<div id="pageIco">
 					<img src="img/ico-converge.png" />
@@ -147,7 +146,7 @@
 			</ul>
 		</div>
 
-		<header>
+		<header id="documentHeader">
 			<div class="row">
 				<div id="pageIco">
 					<img src="img/ico-learn.png" />
