--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <img src="img/ico-design.png" />
         </div>
         <h2>UDCD</h2>
-        <p class="catch">A design decisions making framework in 4 simple steps:<br>
+        <p class="catch">A design decisions making framework in 4 steps:<br>
         Understand, Diverge, Converge, and Document.</p>
         <p class="quote">"Without a practice, you’re just doing design — a short-term activity. But when you practice design, you’re focusing on long-term sustainable success."<br/><span>Verne Ho</span></p>
       </div>
@@ -176,6 +176,8 @@
 		</div>
 	</article>
 	<footer id="mainFooter">
+		<h4>About this framework</h4>
+		<p>This framework is just a compilation of tools, methods, and ways of thinking that I came accross over my career, and that I organized in a structured practice. This is a way to design that I find interesting and that works pretty well for me and for few other people, but I'm always eager to try new ways.<br>Don't hesitate to suggest changes to this document either by <a href="https://www.github.com/julienzmiro/udcd">making a pull request</a>, or by <a href="mailto:julien.zmiro@gmail.com">sending me an email</a>.<br><a href="http://www.julienzmiro.com">Julien Zmiro</a></p>
 		<div><small>Icon design by Michela Tannoia, Scott Lewis, Dmitry Baranovskiy, and Sven Gabriel from The Noun Project</small></div>
 	</footer>
 </div>
