--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
 	</article>
 	<footer id="mainFooter">
 		<h4>About this framework</h4>
-		<p>This framework is just a compilation of tools, methods, and ways of thinking that I came accross over my career, and that I organized in a structured practice. This is a way to design that I find interesting and that works pretty well for me and for few other people, but I'm always eager to try new ways.<br>Don't hesitate to suggest changes to this document either by <a href="https://www.github.com/julienzmiro/udcd">making a pull request</a>, or by <a href="mailto:julien.zmiro@gmail.com">sending me an email</a>.<br><a href="http://www.julienzmiro.com">Julien Zmiro</a></p>
-		<div><small>Icon design by Michela Tannoia, Scott Lewis, Dmitry Baranovskiy, and Sven Gabriel from The Noun Project</small></div>
+		<p>This framework is just a compilation of tools, methods, and ways of thinking that I came accross over my career, and that I organized in a structured practice. This is a way to design that I find interesting and that works pretty well for me and for few other people, but I'm always eager to learn new point of views.<br>Don't hesitate to suggest changes either by <a href="https://www.github.com/julienzmiro/udcd">making a pull request</a>, or by <a href="mailto:julien.zmiro@gmail.com">sending me an email</a>.<br><a href="http://www.julienzmiro.com">Julien Zmiro</a></p>
+		<p>Icons design by Michela Tannoia, Scott Lewis, Dmitry Baranovskiy, and Sven Gabriel from The Noun Project</p>
+		<!-- <div><small>Icon design by Michela Tannoia, Scott Lewis, Dmitry Baranovskiy, and Sven Gabriel from The Noun Project</small></div> -->
 	</footer>
 </div>
