--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
 			</div>
 		</header>
 		<div class="row">
-			<p>Now you should have something clear and exhaustive to communicate. But that's probably a very short term communication : "what should we do to fit this user's need ?"... what about the valuable journey that allowed you to reach this solution ?</p>
-			<p>At this step of the cycle, your goal is mostly to communicate for a long term benefit: beyond your design decision, you now need to talk about <strong>how you ended up to this result</strong>.<br/>
-				You also want to open new opportunities. After all this work, you probably have new ideas, or even new doubts about this project. <strong>So don't hesitate to sow the seeds of future design decisions to be made.</strong>
+			<p>Now you should have something clear and exhaustive to communicate. But that's probably a very short-term communication : "what should we do to fit this user's need ?"... what about explaining how this decision fits in the vision of your design ?</p>
+			<p>At this step of the cycle, your goal is mostly to communicate for a long-term benefit: beyond your design decision, you now need to talk about <strong>how you ended up to this result</strong>.<br/>
+			You also want to open new opportunities. After all this work, you probably have new ideas, or even new doubts about this project. <strong>So don't hesitate to sow the seeds of future design decisions to be made.</strong>
 			</p>
 
 			<h3>Goals</h3>
