--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       </div>
     </header>
 		<div class="row">
-			<p>Whether you realize it or not, you are constantly designing. Whenever you're making a decision that is part of a plan to achieve a goal, you are designing.<br/>
+			<p>Whether you realize it or not, you are constantly designing.<br>
+			Whenever you're making a decision that is part of a plan to achieve a goal, you are designing.<br/>
       Here, we'll "only" talk about product design, the process of making decisions about how a product will behave, as a bridge between people and their goals on the user's side, and between a business and its goals on the company's side.</p>
 			<p>This design practice aims to enable these design decisions to be :
 				<ul>
