--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 		<div class="row">
 			<p>Whether you realize it or not, you are constantly designing.<br>
 			Whenever you're making a decision that is part of a plan to achieve a goal, you are designing.<br/>
-      Here, we'll "only" talk about product design, the process of making decisions about how a product will behave, as a bridge between people and their goals on the user's side, and between a business and its goals on the company's side.</p>
+			Programers plan how they should code, thus they design programs; Managers plan the way a team could work more efficiently, thus they design processes; A job seeker might be planing the way he will find his dream job, thus he design his career;…<br>
+			But once decisions are made, they need to be executed (actually code an algorithm, actually build a product, actually write a resume,…).<br>
+			When we’re not directly executing our design decisions, then design is a lot about communication : how can we save and communicate these design decisions to other people (maybe people who will execute) or even to « our future selves » (because we’ll execute later, or because we’ll continue to design later… just because we think we’ll need the rationale behind those decisions).<br>
+      Here, we'll "only" talk about product design, the process of making and communicating decisions about how a product will behave, as a bridge between people and their goals on the user's side, and between a business and its goals on the company's side.</p>
 			<p>This design practice aims to enable these design decisions to be :
 				<ul>
 					<li><strong>Relevant</strong> : Decisions are focused on fulfilling the first use case</li>
